# swifttex

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  docs.yml
docs/: api-reference.md  app.js  getting-started.md  index.html  index.md  introduction.md  package-lock.json  package.json  site.css
docs/.vitepress/: config.mjs
docs/guides/: react.md  svelte.md  vue.md  web-components.md
docs/pkg/: package.json  swifttex_wasm.d.ts  swifttex_wasm_bg.wasm  swifttex_wasm_bg.wasm.d.ts
scripts/: release_check.sh
swifttex-layout/: Cargo.toml
swifttex-layout/src/: boxes.rs  katex_metrics.rs  layout.rs  lib.rs  metrics.rs  style.rs
swifttex-layout/tests/: layout.rs
swifttex-lexer/: Cargo.toml
swifttex-lexer/src/: lib.rs
swifttex-lexer/tests/: lexer.rs
swifttex-parser/: Cargo.toml
swifttex-parser/src/: ast.rs  lib.rs
swifttex-parser/tests/: parser.rs
swifttex-plugin-api/: Cargo.toml
swifttex-plugin-api/examples/: physics_plugin.rs
swifttex-plugin-api/src/: ast.rs  lib.rs
swifttex-plugin-api/tests/: plugin.rs
swifttex-renderer-mathml/: Cargo.toml
swifttex-renderer-mathml/src/: lib.rs
swifttex-renderer-mathml/tests/: full_suite.rs  mathml.rs
swifttex-renderer-svg/: Cargo.toml
swifttex-renderer-svg/benches/: render_bench.rs
swifttex-renderer-svg/examples/: print.rs
swifttex-renderer-svg/src/: glyph_paths.rs  lib.rs  renderer.rs
swifttex-renderer-svg/tests/: full_suite.rs  integration.rs  renderer.rs
swifttex-wasm/: Cargo.toml  README.md  package.json  style.css  swifttex.d.ts
swifttex-wasm/examples/browser/: index.html
swifttex-wasm/examples/react/: SwiftTeX.jsx
swifttex-wasm/pkg/: package.json  swifttex_wasm.js  swifttex_wasm_bg.wasm
swifttex-wasm/react/: index.d.ts  index.js
swifttex-wasm/src/: lib.rs
swifttex-wasm/svelte/: SwiftTeX.svelte
swifttex-wasm/vue/: SwiftTeX.vue
swifttex-wasm/web-component/: index.d.ts  index.js
