[workspace]
resolver = "2"
members = [
    "swifttex-lexer",
    "swifttex-parser",
    "swifttex-layout",
    "swifttex-renderer-svg",
    "swifttex-wasm",
    "swifttex-renderer-mathml",
    "swifttex-plugin-api",
]

[workspace.metadata]
description = "SwiftTeX — Fast LaTeX math rendering, Rust/WASM"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
