[package]
name = "swifttex-layout"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LikhinMN/swifttex"

[dependencies]
swifttex-parser = { path = "../swifttex-parser" }
swifttex-lexer = { path = "../swifttex-lexer" }
phf = { version = "0.11", features = ["macros"] }
