[package]
name = "swifttex-layout"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LikhinMN/swifttex"
description = "A TeX-inspired layout engine for SwiftTeX."

[dependencies]
swifttex-parser = { path = "../swifttex-parser" }
swifttex-lexer = { path = "../swifttex-lexer" }
phf = { version = "0.11", features = ["macros"] }
