[package]
name = "swifttex-parser"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "A LaTeX math expression parser for SwiftTeX."
repository = "https://github.com/LikhinMN/swifttex"

[dependencies]
swifttex-lexer = { path = "../swifttex-lexer" }
swifttex-plugin-api = { path = "../swifttex-plugin-api" }
