[package]
name = "swifttex-renderer-svg"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LikhinMN/swifttex"

[dependencies]
swifttex-layout = { path = "../swifttex-layout" }
swifttex-parser = { path = "../swifttex-parser" }
swifttex-lexer = { path = "../swifttex-lexer" }
swifttex-renderer-mathml = { path = "../swifttex-renderer-mathml" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_bench"
harness = false
