[package]
name = "swifttex-renderer-svg"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LikhinMN/swifttex"
description = "A fast SVG rendering engine for SwiftTeX."

[dependencies]
swifttex-layout = { path = "../swifttex-layout" }
swifttex-parser = { path = "../swifttex-parser" }
swifttex-lexer = { path = "../swifttex-lexer" }
swifttex-plugin-api = { path = "../swifttex-plugin-api" }
swifttex-renderer-mathml = { path = "../swifttex-renderer-mathml" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_bench"
harness = false
