[package]
name = "swifttex-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
swifttex-renderer-svg = { path = "../swifttex-renderer-svg" }
swifttex-layout = { path = "../swifttex-layout" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]

