[package]
name = "swifttex-wasm"
version = "0.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/LikhinMN/swifttex"
description = "WASM bindings for the SwiftTeX math renderer."
keywords = ["latex", "math", "wasm", "katex", "svg"]
categories = ["mathematics", "wasm", "rendering"]

[dependencies]
swifttex-renderer-svg = { path = "../swifttex-renderer-svg" }
swifttex-renderer-mathml = { path = "../swifttex-renderer-mathml" }
swifttex-plugin-api = { path = "../swifttex-plugin-api" }
swifttex-layout = { path = "../swifttex-layout" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
